--- a/data-engineer.html
+++ b/data-engineer.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://twincap.join.com/jobs/276682-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421716--permanent-job-data-engineer-salary-140-180k-accept-visa-candidates'>Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters</a></h5> 
@@ -68,11 +68,11 @@
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ceceliahealth.applytojob.com/apply/7XwqfV9YFB/Senior-Data-Engineer'>Senior Data Engineer - Cecelia Health - Career Page</a></h5> 
+<h5><a href='http://ceceliahealth.applytojob.com/apply/7XwqfV9YFB/Senior-Data-Engineer'>Senior Data Engineer - Cecelia Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692358496-data-engineer'>Numberly Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692358496-data-engineer'>Numberly Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://depop.workable.com/jobs/1068561'>Data Engineer - Apply online - Depop - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://depop.workable.com/jobs/1068561'>Data Engineer - Apply online - Depop - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Data Engineer at Depop.</p>
 <hr/>
@@ -104,11 +104,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Data Engineer at Crisalix.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/sr-data-engineer-25224'>Sr Data Engineer - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/sr-data-engineer-25224'>Sr Data Engineer - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... And LexisNexis has over 2PB of the best legal training data in the world! We are 
 looking for an experienced data engineer who is devoted to...</p>
@@ -191,7 +191,7 @@ analytic,?...</p>
 <p>Jul 15, 2019 ... FACT - Farmington, Connecticut is now hiring a Data Engineer in Farmington, 
 Connecticut. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -199,7 +199,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -220,7 +220,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p>Jul 15, 2019 ... Introduce best practices and standards in effective RDMS usage in large scale 
 enterprise systems; Architect and implement large financial data warehouse,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4369270002'>Job Application for Principal Data Engineer at WeWork Global ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4369270002'>Job Application for Principal Data Engineer at WeWork Global ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Design, architect and implement the organization-wide key data sets; 
 Consistently evolve data model & data schema based on business and 
@@ -311,7 +311,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
+<h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
       Data Engineer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -446,7 +446,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... You'll be using modern, scalable technologies to support the expansion of 
 machine learning and be part of transforming the way that we understand and 
@@ -456,7 +456,7 @@ talk to?...</p>
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
